# xavi_1

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  ender.md  inject_subject_once.md  starter.md  빠른 사용법.md
.cargo/: config.toml
apps/xavi-bootstrap/: Cargo.toml
apps/xavi-bootstrap/src/: main.rs
apps/xavi-dev-console/: Cargo.toml
apps/xavi-dev-console/src/: lib.rs  main.rs
crates/xavi-application/: Cargo.toml
crates/xavi-application/src/: lib.rs
crates/xavi-application/src/ports/: development_cycle_alias_store.rs  mod.rs  (+2 more)
crates/xavi-domain/: Cargo.toml
crates/xavi-domain/src/: development_cycle.rs  development_trace.rs  health.rs  lib.rs
crates/xavi-harness/: Cargo.toml
crates/xavi-harness/src/: builder.rs  harness.rs  lib.rs
crates/xavi-harness/src/assertions/: development_trace.rs  health.rs  mod.rs
crates/xavi-harness/src/doubles/: mod.rs  scripted_health_status_reader.rs
crates/xavi-harness/src/fixtures/: development_trace.rs  health.rs  mod.rs
crates/xavi-harness/src/scenarios/: development_trace.rs  health.rs  mod.rs
crates/xavi-harness/tests/: development_trace.rs  health_check.rs
crates/xavi-infrastructure/: Cargo.toml
crates/xavi-infrastructure/src/: lib.rs
crates/xavi-infrastructure/src/development_trace/: mod.rs  sqlite_development_trace_store.rs
crates/xavi-infrastructure/src/health/: in_memory_status_reader.rs  mod.rs
docs/: README.md
docs/agent/: README.md
docs/agent/ai-docs/: README.md
docs/agent/analysis/: README.md
docs/agent/codegen/: README.md  backlog.md  constraints.md  progress.md
docs/agent/cycle-report/: README.md
docs/agent/dev-console/: README.md
docs/agent/ephemeral/: README.md  RESULT_TEMPLATE.md  SESSION_TEMPLATE.md
docs/agent/orchestra/: README.md
docs/agent/planning/: README.md  brief.md  decision-log.md  dialogue-log.md
docs/agent/review/: README.md  checklist.md  findings.md  fix-log.md  scope.md
docs/agent/test/: README.md
docs/agent/user-docs/: README.md
docs/human/: README.md
docs/human/user-docs/: README.md  feature-map.md  file-map.md  live-log.md  report-template.md
(+18 files in other folders)
