[workspace]
members = [
    "apps/xavi-bootstrap",
    "crates/xavi-application",
    "crates/xavi-domain",
    "crates/xavi-harness",
    "crates/xavi-infrastructure",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
