[package]
name = "xavi-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
xavi-application = { path = "../xavi-application" }
xavi-domain = { path = "../xavi-domain" }
xavi-infrastructure = { path = "../xavi-infrastructure" }
