[package]
name = "xavi-infrastructure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
xavi-application = { path = "../xavi-application" }
xavi-domain = { path = "../xavi-domain" }
